<resources>
    <string name="app_name">Project4</string>
    <string name="your_ticket_Text">Your tickets</string>
    <string name="continue_payment_Text">CONTINUE TO PAYMENT</string>
    <string name="estimated_time_Text">Estimated time</string>
    <string name="retail_payment_Text">Retail payment</string>
    <string name="bank_transfer_Text">Bank transfer</string>
    <string name="credit_card_Text">Credit card</string>
    <string name="select_payment_Text">please select one of the payment method below</string>
    <string name="total_payment_Text">Total Payment</string>
    <string name="unique_code_Text">Unique code</string>
    <string name="nameText">Name</string>
    <string name="complete_boooking_Text">Complete booking</string>
    <string name="payment_method_Text">Payment Method</string>
    <string name="person_info_Text">Personal Information</string>
    <string name="po_name_Text">PO Name</string>
    <string name="scheduleText">Schedule</string>
    <string name="seat_no_Text">Seat no.</string>
    <string name="tickets_Text">Tickets</string>
    <string name="payment_Text">Payment</string>
    <string name="bus_no_Text">Bus no.</string>
    <string name="phone_number_Text">Phone number</string>
    <string name="totalText">Total</string>
    <string name="seats_Text">Seats</string>
    <string name="passanger_name">John Doe, 24</string>
    <string name="phone_number">08123990823</string>
    <string name="seat_count">2</string>
    <string name="po_name">Sempati Star</string>
    <string name="terminal_arrival">Terminal Bandaraya</string>
    <string name="terminal_departure">Terminal Amplas</string>
    <string name="city_departure">MEDAN</string>
    <string name="seat_no">9, 10</string>
    <string name="time_arrival">09:10</string>
    <string name="time_departure">17:35</string>
    <string name="city_arrival">PEKANBARU</string>
    <string name="time_estimated">13h45m</string>
    <string name="bus_no">P 9123 NN</string>
    <string name="date_departure">23 Jul 2019</string>
    <string name="date_arrival">24 Jul 2019</string>
    <string name="unique_code">333</string>
    <string name="ticket_count">2 x Rp166.000,00</string>
    <string name="total_cost">Rp332.333,00</string>
    <string name="btnSelect">SELECT</string>
    <string name="verify_payment_Text">VERIFY PAYMENT</string>
    <string name="alfamart_1">1. Ask the cashier for Online payment</string>
    <string name="alfamart_5">5. Keep the receipt, in case you’re having problem with payment verification.</string>
    <string name="alfamart_2">2. When you asked what Payment, answer Bux.</string>
    <string name="alfamart_3">3. The cashier will ask what is your booking code. Here is your bokking code</string>
    <string name="alfamart_4">4. You’re gonna be charged as much as the total payment. (as you can see in this header).</string>
    <string name="alfamart">Alfamart</string>
    <string name="bni">BNI Mobile banking</string>
    <string name="cimb_niaga">CIMB Niaga Mobile banking</string>
    <string name="cimb">CIMB Mobile banking</string>
    <string name="bank_1">1. Select transfer</string>
    <string name="bank_2">2. In sub menu select virtual account transfer</string>
    <string name="bank_3">3. Type this number in the field</string>
    <string name="bank_4">4. After you press continue, input this number to the transfer amount field.</string>
    <string name="bank_5">5. Dont forget to keep the receipt for verification process</string>
    <string name="payment_code">230719-0001</string>
    <string name="card_number_Text">Card number</string>
    <string name="cc_number">**** **** **** ****</string>
    <string name="valid_until_Text">Valid until</string>
    <string name="cc_month_Text">Month</string>
    <string name="cc_year_Hint">Year</string>
    <string name="card_holder_Text">Card holder</string>
    <string name="cc_surname_Text">Surname</string>
    <string name="vcc_Text">VCC</string>
    <string name="last_three_digit_on_your_card_Text">Last three digit on your card</string>
    <string name="cc_visa">cc-visa</string>
    <string name="alfamart_payment_code">Alfamart payment code</string>
    <string name="back_to_detail">BACK TO DETAIL</string>
</resources>