<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="352dp"
        android:layout_height="281dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="32dp"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <View
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="288dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/view_rate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="30dp"
                android:layout_height="21dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="1/5"
                android:textColor="@color/red"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="13dp"
                android:layout_height="13dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="48dp"
                android:background="@drawable/star_red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/price"
                android:layout_width="120dp"
                android:layout_height="22dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="216dp"
                android:gravity="top"
                android:text="Rp.80.000,00"
                android:textAppearance="@style/nu_exb_16"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="48dp"
                android:layout_height="22dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="240dp"
                android:gravity="top"
                android:text="/seat"
                android:textColor="@color/red"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/POBus"
                android:layout_width="140dp"
                android:layout_height="22dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="28dp"
                android:layout_marginTop="16dp"
                android:gravity="top"
                android:text="@string/po_name"
                android:textAppearance="@style/nu_exb_16"
                android:textColor="@color/red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="4dp"
                android:layout_height="36dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="32dp"
                android:background="@drawable/rectangle_red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/BusNo"
                android:layout_width="62dp"
                android:layout_height="21dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="180dp"
                android:layout_marginTop="25dp"
                android:gravity="top"
                android:lineSpacingExtra="10sp"
                android:text="@string/bus_no"
                android:textAppearance="@style/lato_12"
                android:textColor="#9A9A9A"
                android:translationY="-4.8sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/city_departure"
                android:layout_width="90dp"
                android:layout_height="19dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="52dp"
                android:gravity="top"
                android:text="@string/city_departure"
                android:textAppearance="@style/nu_exb_14"
                android:textColor="#585858"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/time_departure"
                android:layout_width="45dp"
                android:layout_height="19dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="28dp"
                android:layout_marginTop="52dp"
                android:gravity="top"
                android:text="@string/time_departure"
                android:textAppearance="@style/nu_exb_14"
                android:textColor="#585858"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:layout_width="1dp"
                android:layout_height="45dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="48dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="82dp"
                android:background="@drawable/route_dot_line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/time_arrival"
                android:layout_width="45dp"
                android:layout_height="19dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="28dp"
                android:layout_marginTop="136dp"
                android:gravity="top"
                android:text="@string/time_arrival"
                android:textAppearance="@style/nu_exb_14"
                android:textColor="#585858"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/city_arrival"
                android:layout_width="90dp"
                android:layout_height="18dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="136dp"
                android:gravity="top"
                android:text="Pekan Baru"
                android:textAppearance="@style/nu_exb_14"
                android:textColor="#585858"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/terminal_arrival"
                android:layout_width="140dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="160dp"
                android:gravity="top"
                android:lineSpacingExtra="10sp"
                android:text="@string/terminal_arrival"
                android:textAppearance="@style/lato_12"
                android:textColor="#D8D8D8"
                android:translationY="-4.8sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date_arrival"
                android:layout_width="80dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="180dp"
                android:gravity="top"
                android:lineSpacingExtra="10sp"
                android:text="@string/date_arrival"
                android:textAppearance="@style/lato_12"
                android:textColor="#808080"
                android:translationY="-4.8sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/date_departure"
                android:layout_width="80dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="100dp"
                android:gravity="top"
                android:lineSpacingExtra="10sp"
                android:text="@string/date_departure"
                android:textAppearance="@style/lato_12"
                android:textColor="#808080"
                android:translationY="-4.8sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/terminal_departure"
                android:layout_width="140dp"
                android:layout_height="24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="100dp"
                android:layout_marginTop="76dp"
                android:gravity="top"
                android:lineSpacingExtra="10sp"
                android:text="@string/terminal_departure"
                android:textAppearance="@style/lato_12"
                android:textColor="#D8D8D8"
                android:translationY="-4.8sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/btn_BookNow"
                android:layout_width="163dp"
                android:layout_height="49dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rectangle_red"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.941"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="22dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="29dp"
                    android:layout_marginTop="15dp"
                    android:gravity="top"
                    android:text="BOOK NOW"
                    android:textAppearance="@style/nu_exb_16"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>